--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
         }
 
         function resetValues2() {
-            document.getElementById('v_open2_1').value = 0;
-            document.getElementById('v_open2_2').value = 0;
+            document.getElementById('v_loaded2_1').value = 0;
+            document.getElementById('v_loaded2_1').value = 0;
             document.getElementById('rload2_1').value = 50;
             document.getElementById('rload2_2').value = 25;
             document.getElementById('zsource2').innerText = "";
